<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dialer_codes"
            android:icon="@drawable/ic_dialpad"
            android:title="@string/dialer_codes"
            />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"
            />
        <item
            android:id="@+id/nav_history_map"
            android:icon="@drawable/ic_history_map"
            android:title="@string/history_map"
            />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_action_line_chart"
            android:title="@string/statistics"
            />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications"
            />
    </group>

</menu>
