<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/stats_chart_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/stats_chart_header_text"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:paddingTop="@dimen/hist_list_item_padding"/>

        <FrameLayout
            android:id="@+id/stats_chart_spinner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats_chart_header"
            android:visibility="gone">

        <TextView
            android:id="@+id/stats_duration_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/stats_duration_spinner_label_text"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/stats_duration_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"/>

        </FrameLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/stats_chart1"
            android:layout_width="match_parent"
            android:layout_below="@+id/stats_chart_spinner_container"
            android:background="@android:color/transparent"
            android:layout_height="300dp" />

        <FrameLayout
            android:id="@+id/stats_stat_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats_chart1">

            <RelativeLayout
                android:id="@+id/stats_stat_rel_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/stats_total_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/stats_total_time_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/stats_total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:text="@string/stats_total_time_default" />

                <TextView
                    android:id="@+id/stats_total_time_sprint_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_label"
                    android:layout_alignParentStart="true"
                    android:text="@string/stats_total_time_sprint_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/stats_total_time_sprint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:text="@string/stats_total_time_default" />

                <TextView
                    android:id="@+id/stats_total_time_tmobile_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_sprint_label"
                    android:layout_alignParentStart="true"
                    android:text="@string/stats_total_time_tmobile_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/stats_total_time_tmobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_sprint"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:text="@string/stats_total_time_default" />

                <TextView
                    android:id="@+id/stats_total_time_uscell_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_tmobile_label"
                    android:layout_alignParentStart="true"
                    android:text="@string/stats_total_time_uscell_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/stats_total_time_uscell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_tmobile"
                    android:layout_alignParentEnd="true"
                    android:textSize="16sp"
                    android:text="@string/stats_total_time_default" />

                <TextView
                    android:visibility="gone"
                    android:id="@+id/stats_total_time_unknown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_uscell_label"
                    android:layout_alignParentStart="true"
                    android:text="@string/stats_total_time_unknown_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/stats_total_time_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_uscell"
                    android:layout_alignParentEnd="true"
                    android:text="@string/stats_total_time_default"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stats_total_time_disconnected_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_unknown_label"
                    android:layout_alignParentStart="true"
                    android:text="@string/stats_total_time_disconnected_label"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/stats_total_time_disconnected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_unknown"
                    android:layout_alignParentEnd="true"
                    android:text="@string/stats_total_time_default"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stats_total_time_disconnected_label"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:layout_centerHorizontal="true">

                    <Button
                        android:id="@+id/stats_clear_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_stats" />

                    <Button
                        android:id="@+id/stats_refresh_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/stats_clear_btn"
                        android:text="@string/refresh" />
                </RelativeLayout>
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>
</ScrollView>