<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardBackgroundColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/main_header_pad_bottom">

            <TextView
                android:id="@+id/mainHeadWifiSsid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/please_wait"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/mainHeadWifiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/mainHeadWifiSsid"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/wifi_label_text"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/mainHeadWifiInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/mainHeadWifiSsid"
                android:text="@string/wifi_label_text"
                android:textSize="12sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/mainHeadNetworkLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/network_info_label_text"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/mainHeadNetworkName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mainHeadNetworkLabel"
                android:paddingStart="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/please_wait"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/mainHeadNetworkInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/mainHeadNetworkLabel"
                android:text="@string/network_info_label_text"
                android:textSize="12sp"
                android:visibility="gone"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/mainHeader">

        <FrameLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
